347233  Fix memcheck/tests/strchr on OS X 10.10 (Haswell) 
347379  valgrind --leak-check=full memleak errors from system libraries on OS X 10.8
        == 217236
347389  unhandled syscall: 373 (Linux ARM syncfs)
347978  Remove bash dependencies where not needed
347982  Fix undefined symbols for architecture x86_64: "_global", referenced from:
        _test_so_global in tls_so-tls_so.o
348102  Patch updating v4l2 API support
348247  jno jumps wrongly when overflow is not set
348565  Fix detection of command line option availability for clang
348728  Fix broken check for VIDIOC_G_ENC_INDEX
348748  Fix redundant condition
348890  Fix clang warning about unsupported --param inline-unit-growth=900
348949  Bogus "ERROR: --ignore-ranges: suspiciously large range"
349086  Fix UNKNOWN task message [id 3406, to mach_task_self(), 
        reply 0x........] (task_set_info)
349087  Fix UNKNOWN task message [id 3410, to mach_task_self(),
        reply 0x........] (task_set_special_port)
349626  Implemented additional Xen hypercalls
n-i-bz  Provide implementations of certain compiler builtins to support
        compilers who may not provide those
n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
n-i-bz  Fix compilation on distros with glibc < 2.5
n-i-bz  (vex 3098) Avoid generation of Neon insns on non-Neon hosts
n-i-bz  Enable rt_sigpending syscall on ppc64 linux.
n-i-bz  mremap did not work properly on shared memory
n-i-bz  Fix incorrect sizeof expression in syswrap-xen.c reported by Coverity


Release 3.10.1 (25 November 2014)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.10.1 is a bug fix release.  It fixes various bugs reported in 3.10.0
and backports fixes for all reported missing AArch64 ARMv8 instructions
and syscalls from the trunk.  If you package or deliver 3.10.0 for others
to use, you might want to consider upgrading to 3.10.1 instead.

The following bugs have been fixed or resolved.  Note that "n-i-bz"